# Breakout-Game

./: CMakeLists.txt  MainWindow.cpp  MainWindow.h  main.cpp
Client/: SocketClient.cpp  SocketClient.h  main.cpp
Game_GUI/: Ball.cpp  Ball.h  BarPlayer.cpp  BarPlayer.h  Game.cpp  Game.h  main.cpp
SocketServer/: SocketServer.cpp  SocketServer.h
